# AdGuardHome_OpenWRT_restarter

./: Cargo.toml  Makefile  README.md  config.toml
src/: main.rs
