[package]
name = "adguardhome_openwrt_restarter"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
chrono-tz = "0.10.4"
crossterm = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serenity = "0.12.4"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.7"
